--- a/Exercise 2/style.css
+++ b/Exercise 2/style.css
@@ -112,7 +112,8 @@ iframe:hover{
 }
 
 h1{
-	margin: 100px;
+	margin-top:100px;
+	
 	text-align: center;
 	text-transform: unset;
 	backface-visibility: hidden;
