--- a/Exercise 2/style.css
+++ b/Exercise 2/style.css
@@ -75,14 +75,15 @@ a.nav-link:hover{
 }
 iframe{
 	padding: 20px;
-	height: 200px;
-	width:200px;
+	height: 100px;
+	width:25%;
+	
 	transition: 1s;
 }
 iframe:hover{
-	padding: 10px;
-	height: 400px;
-	max-width:400px;
+	padding: 20px;
+	height: 360px;
+	width:90%;
 	transition: 0.5s;
 }
 
