--- a/Exercise 2/style.css
+++ b/Exercise 2/style.css
@@ -4,14 +4,23 @@ body{
 	
 }
 
+
+
 #div1{
 	background-image: url(img4.jpg);
+	transition: 1s;
 	}
-
+#div1:hover{
+	background-image: url(Music.jpg);
+	transition: 1s;
+	transform: translateX(10);
+}
 #div2{
 	background-image: url(img1.jpg);
 	
 }
+
+
 
 
 #div1,#div2,#div3,#div4{
@@ -46,11 +55,15 @@ a.nav-link:hover{
 	color: #f2f2f2;
 	
 	transition: 1s;
+	letter-spacing: 15px;
+
 }
 
 .nav-link{
 	color: #f2f2f2;
 	transition: 1s;
+	font-weight: 600;
+	letter-spacing: 10px;
 }
 
 .nav{
@@ -98,11 +111,13 @@ iframe:hover{
 	    line-height: 1;
     border-radius: 500px
 
+
 }
 
 .btn-outline-danger:hover{
 	transform:scale(1.1);
 	transition: 1s ease-in-out;
+	letter-spacing: 5px;
 
 }
 
@@ -110,14 +125,17 @@ iframe:hover{
 	transform: scale(1.01);
 
 	transition: 1s ease-in-out;
+	letter-spacing: 0.6em;
+
 }
 
 h1{
 	margin-top: 100px;
-	
+	/*font-size: 4rem;*/
 	text-align: center;
 	text-transform: unset;
 	backface-visibility: hidden;
+
 
 }
 
@@ -138,3 +156,6 @@ h1{
 	
 
 }
+
+
+   
